--- a/app/assets/stylesheets/_videos.sass
+++ b/app/assets/stylesheets/_videos.sass
@@ -1,162 +1,216 @@
+=gradient($from, $to)
+  /* fallback/image non-cover color */
+  background-color: $from
+  /* Firefox 3.6+ */
+  background-image: -moz-linear-gradient($from, $to)
+  /* Safari 4+, Chrome 1+ */
+  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from($from), to($to))
+  /* Safari 5.1+, Chrome 10+ */
+  background-image: -webkit-linear-gradient($from, $to)
+  /* Opera 11.10+ */
+  background-image: -o-linear-gradient($from, $to)
+
+=video_container
+  list-style-type: none
+  background: rgb(240,240,240)
+  border: 1px solid rgb(220,220,220)
+  +round_top
+  +round_bottom
+
+=video_container_info
+  overflow: auto
+  position: relative
+  margin-top: 4px
+
+=video_thumbnail_image
+  display:block
+  width: 100%
+
+=top_right
+  display: block
+  position: absolute
+  top: 0
+  right: 0
+
 // ------------Common styles
 
-article.videos-home .video-box,
-article.videos-series .video-box,
-article.videos-detail .video-box,
-article.videos-publisher .video-box
-  border: 1px solid #e1e1e1
-  width: 399px
-  float: left
-  padding: 4px
-  margin: 0 15px 40px 0
+#video-show,
+#video-series,
+#videos-index
+  article
+    padding: 0
+
+    .inner
+      overflow: auto
+      padding: 20px
+
+#video-show,
+#video-series
+  #title-bar
+    position: relative
+    padding: 20px
+    padding-bottom: 0
+
+    h1
+      margin-bottom: 0
+
+    .publisher
+      color: #333
+      margin: -10px 0 46px 0
+      font-size: 13px
+
+    .share
+      +top_right
+      top: 30%
+      right: 25px
+
+      a
+        border: 1px solid #AAA
+        font-weight: bold
+        text-decoration: none
+        color: #fff
+        padding: 4px 11px
+        display: block
+        font-size: 15px
+        text-shadow: #000 0 1px 0
+        +gradient(#CCC,#AAA)
+        +round_bottom
+        +round_top
+
+
 
 // ------------Landing page
 
-article.videos-home,
-article.videos-publisher
-  overflow: hidden
+#videos-index
 
-  .video-box
-    a
-      display: block
+  ul.videos
 
-    .video-name
-      height: 70px
-      color: #fff
-      text-decoration: none
-      padding-top: 185px
-      text-indent: 100%
-      overflow: hidden
-      white-space: nowrap
+    li:hover
+      +box-shadow(rgba(0,0,0,0.3) 0 2px 8px)
 
-      div
-        background: rgba(0,0,0,.4) image-url("blue-arrow@2x.png") no-repeat 358px 14px
-        padding-bottom: 5px
+    li.odd
+      margin-right: 0px
 
-        h2,
-        p
-          text-shadow: 0 0 5px #000
-          filter: dropshadow(color=#000, offx=0, offy=0)
-          margin: 0
+    li
+      float: left
+      width: 391px
+      padding: 8px
+      margin: 0 30px 40px 0
+      +video_container
 
-        h2
-          padding: 5px 0 5px 20px
+      img
+        +video_thumbnail_image
 
-        p
-          display: block
-          padding: 0 0 0 20px
-          margin-top: -6px
+      .info
+        +video_container_info
 
-    .video-pub
-      text-decoration: none
-
-      h5
-        margin: 0
-        padding: 8px 0 9px 42px
-        background: image-url("icon_small_about.png") no-repeat 20px center
+      .publisher
+        +top_right
+        padding-left: 22px
+        background: image-url("icon_small_about.png") no-repeat 0px center
         color: #777
 
-article.videos-home .video-box,
-article.videos-publisher .video-box
-
-  // Backgrounds for each series
-
-  .bible-series
-    background: image-url("video-bible-series.jpg") no-repeat top left
-
-  .jesus-film
-    background: image-url("video-jesus-film.jpg") no-repeat top left
-
-article.videos-home .video-box:hover,
-article.videos-publisher .video-box:hover
-  +box-shadow(rgba(0,0,0,0.3) 0 2px 15px)
+      .count
+        font-weight: bold
 
 // ------------Series detail page
+#video-series
+  // special case we need article to have zero padding for hero image.
+  // .inner defined below to add back in the padding where necessary
 
-article.videos-series
-  background: image-url("videos-bs-hero.jpg")
-  background-repeat: no-repeat !important
-  background-position: top center
-
-  h1
-    color: #fff
-    margin-top: 280px
-    font-size: 60px
-
-  .video-pub
-    color: #fff
-    margin: -10px 0 46px 0
+  #hero
+    width: 888px
     display: block
-    padding-left: 25px
-    background: image-url("icon_info.png") no-repeat top left
+    margin: 10px auto
+    +round_top
+    +round_bottom
 
-  .video-box
-    width: 245px
-    height: 128px
-    margin: 0 25px 40px 0
-    padding: 0
-    background: image-url("video-bible-series.jpg") no-repeat top center
+  #episodes
 
-    .video-name
+    li:hover
+      +box-shadow(rgba(0,0,0,0.3) 0 2px 8px)
+
+    li
+      width: 336px
+      float: left
+      margin-right: 20px
+      padding-left: 0
+      +video_container
+
+    // #episodes a
+    a
       display: block
-      color: #fff
+      padding: 8px
+      margin: 0
       text-decoration: none
-      text-shadow: 0 0 5px #000
-      filter: dropshadow(color=#000, offx=0, offy=0)
 
-      h3
-        padding: 80px 0 0 15px
-        font-size: 16px
-        margin: 0
+      // #episodes a img
+      img
+        +video_thumbnail_image
 
-      p
-        padding: 0 0 0 15px
-        margin: 0
+      // #episodes a .info
+      .info
+        +video_container_info
 
-      div:hover
-        background: image-url("video-play.png") no-repeat center 30px
+        // #episodes a .info .title
+        .title
+          font-size: 16px
+          margin: 6px 0 1px 4px
 
+        // #episodes a .info .runtime
+        .runtime
+          color: #777
+          font-size: 12px
+          +top_right
 
-article.videos-series
-  h4
-    clear: both
+  // overriding #main article ul li styling :-(
+  ul li
+    background:
+      image: none
+    padding-left: 0
+    padding-top: 0
 
 // -------------- Video detail page
+#video-show
 
-article.videos-detail
+  article .inner
+    padding-top: 0
 
-  h1
-    margin-bottom: 4px
-
-  .video-pub
-    color: #777
-
-    h5
-      margin: 0 0 8px 0
-      padding: 8px 0 9px 25px
-      background: image-url("icon_small_about.png") no-repeat left center
-
-  .videos-verses
+  #video
+    background: #333
+    width: 888px
+    height: 500px
     display: block
-    color: #666
-    text-transform: uppercase
-    font-size: 11px
-    padding-top: 10px
-    border-top: 1px solid #e1e1e1
+    margin: 10px auto
+    +round_top
+    +round_bottom
 
-  .reference_tokens
-    margin-bottom: 6px
-
-  .reference_tokens > li a
-    border-radius: 4px
-
-  .video-info
+  #details
+    width: 500px
+    float: left
     padding: 15px 0
-    border-top: 1px solid #e1e1e1
-    border-bottom: 1px solid #e1e1e1
+    margin: 0
 
-#main article.videos-detail,
-#main article.videos-publisher
+    .refs
+      border-bottom: 1px solid #e1e1e1
+      padding-bottom: 8px
+      margin-bottom: 8px
+
+      span
+        display: block
+        color: #666
+        text-transform: uppercase
+        font-size: 11px
+
+      .reference_tokens
+        margin-bottom: 0
+      .reference_tokens > li a
+        border-radius: 4px
+
+  #other
+    padding: 15px 0
+    width: 340px
+    float: right
 
   .videos-list
     h5
@@ -178,25 +232,8 @@ article.videos-detail
       li:first-child
         border-top: none
 
-// ----------------Publisher page
-// ----------------Styles for the list of available videos is right above this comment
+// Publisher page
 
-article.videos-publisher
-
+#video-publisher
   h1
-    margin-bottom: 5px
-
-  .video-pub
-    background: image-url("icon_small_link.png") no-repeat left center
-    color: #777
-    padding-left: 20px
-    text-decoration: none
-    font-weight: bold
-    margin-bottom: 20px
-    display: block
-
-  .video-box .video-name
-    height: auto
-
-  .videos-list
-    margin-bottom: 10px
+    margin-bottom: 15px
