--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -1,45 +1,45 @@
+- html_attributes(id:"video-show",classes:"videos")
+
 - @sidebar = false
 
-%article.videos-detail
+%article
+  #title-bar
+    %h1= @video.title
 
-  -# Video code here
-  %video
+    %span.publisher
+      by
+      =link_to(@video.credits, publisher_video_path(id: @video.id))
 
-  %h1
-    The Bible Series - Part 1
-  =link_to(publisher_video_path(id: "test"), {class: "video-pub"}) do
-    %h5
-      By Sum Dudes
+    %span.share
+      =link_to("Share","#")
 
-  -# Related scripture
-  %span.videos-verses
-    Related Scripture
+  #video
 
-  %ul.reference_tokens
-    %li
-      %a
-        John 1:1
-    %li
-      %a
-        Revelation 2:12
+  .inner
 
-  %p.video-info
-    Therefore if there is any consolation in Christ, if any comfort of love, if any fellowship of the Spirit, if any affection and mercy, 2fulfill my joy by being like-minded, having the same love, being of one accord, of one mind. 3Let nothing be done through selfish ambition or conceit, but in lowliness of mind let each esteem others better than himself. 4Let each of you look out not only for his own interests, but also for the interests of others.
+    #details
+      %div.refs
+        - if @video.references
+          %span
+            Related Scripture
 
-  .videos-list
-    %h5
-      Other videos in this series
+          %ul.reference_tokens
+            - @video.references.each do |ref|
+              %li
+                %a= ref.human
+      %p.description= @video.description
 
-    =link_to(category_videos_path()) do
-      &#91;View all&#93;
+    #other
+      .videos-list
+        %h5 Other videos in this series
 
-    %ul
-      %li
-        =link_to(publisher_video_path(id: "test")) do
-          Part 2 - Description would go here
-      %li
-        =link_to(publisher_video_path(id: "test")) do
-          Part 3 - Description would go here
-      %li
-        =link_to(publisher_video_path(id: "test")) do
-          Part 4 - Description would go here
+        %ul
+          %li
+            =link_to(publisher_video_path(id: "test")) do
+              Part 2 - Description would go here
+          %li
+            =link_to(publisher_video_path(id: "test")) do
+              Part 3 - Description would go here
+          %li
+            =link_to(publisher_video_path(id: "test")) do
+              Part 4 - Description would go here
