Reading plans:  tabs on RP page, and publisher text string for green button, list in RP/My Plans, tweaked mobile RP styles, cleaned up the mobile RP settings page

--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -17,6 +17,7 @@
   padding: 30px 30px 15px
   position: relative
   min-height: 368px
+  border-radius: 0
 
   .no_sidebar &:after
     width: 908px
