--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -287,8 +287,8 @@
   #invalid_chapter button
     display: none
 
-  input[type="submit"].action_button_green
-    display: none
+  // input[type="submit"].action_button_green
+    // display: none
 
   input[type="submit"].action_button_green,
   input[type="submit"].action_button_blue,
@@ -336,9 +336,9 @@
   .reading_plan_index .action_button_green,
   .reading_plan_index .action_button_blue
     width: 90%
-     
+
   .dynamic_menu.version_select th a
-    min-width: 4em   
+    min-width: 4em
 
   // ---------- Pages
 
@@ -594,9 +594,9 @@
     .progress_wrap
       width: 95%
       height: 55px
-      float: left
       padding: 0
       background: none
+      margin-bottom: 0
 
     .progress_bar_outer
       left: 7px
@@ -724,6 +724,11 @@
 
       .faux_checkbox
         margin-top: 0px
+
+  #main article.rp_settings
+    .float_left,
+    .float_right
+      float: none !important
 
   // ----------------- Single verse page
 
