--- a/app/assets/stylesheets/mobile/_tabs.sass
+++ b/app/assets/stylesheets/mobile/_tabs.sass
@@ -57,6 +57,7 @@
     background: #fff
     border-radius: 0px
     color: #666 !important
+    +box-shadow(none)
 
   dd.highlighted a
     padding-left: 0px
@@ -93,4 +94,4 @@
 #main article .combo_button + .big_list,
 #main article .combo_button + .split_pane,
 #main article .tab_navigation + table
-  margin-top: 50px !important
+  margin-top: 60px !important
