--- a/app/assets/stylesheets/_pages.sass
+++ b/app/assets/stylesheets/_pages.sass
@@ -275,5 +275,11 @@ a.cta span
   p
     margin-bottom: 0
 
+// -------------------Reading plans settings page
 
+article.rp_settings
 
+  input[type="submit"].action_button_green,
+  .action_button_green,
+    width: 160px
+    border-radius: 5px
