--- a/app/assets/stylesheets/mobile/_pages.sass
+++ b/app/assets/stylesheets/mobile/_pages.sass
@@ -332,6 +332,23 @@ a.cta h3
     .faux_checkbox
       margin-top: 0px
 
+.widget
+  ul
+    border: 0
+
+  .widget_menu p
+    font-size: 15px
+
+#main article.rp_settings
+  div,
+    width: auto !important
+    margin-top: 20px !important
+  .action_button_green
+    width: 100%
+    margin: 0
+  .action_button_blue
+    margin: 0
+
 // ----------------- Single verse page
 
 #header
