Audio work + bugs.

--- a/app/assets/stylesheets/mobile/_audio_player.sass
+++ b/app/assets/stylesheets/mobile/_audio_player.sass
@@ -1,8 +1,8 @@
 .mejs-controls
-  width: 70%
+  width: 174px
 
 .mejs-time-rail
-  width: 64% !important
+  width: 106px !important
   background: #fff
 
   span
