--- a/app/assets/stylesheets/mobile/_bookmarks.sass
+++ b/app/assets/stylesheets/mobile/_bookmarks.sass
@@ -8,15 +8,12 @@
     width: auto
     margin-bottom: 0
 
-    .li_bookmark
-      div
-        float: none !important
-
   .big_list
     margin: 0
 
     .li_bookmark
       background: none
+      overflow: hidden
 
     .li_bookmark:first-child
       padding-top: 0
@@ -59,14 +56,12 @@
       padding-top: 0
       margin-top: 16px
 
-      div
-        float: none !important
-
       h5
         margin-bottom: 0
 
     .li_note
       background: none
+      overflow: hidden
 
     .negative_gutter_top_half
       margin-top: -5px !important
