--- a/app/assets/stylesheets/mobile/_main_reader.sass
+++ b/app/assets/stylesheets/mobile/_main_reader.sass
@@ -36,13 +36,13 @@
   background: #2c2b2b
   top: -190px
   left: 0px
-  width: 100%
+  //width: 100%
   z-index: 194
   color: #fff
   padding: 10px 0px 10px
 
   div.mejs-audio, dl, dt
-    width: 95%
+    //width: 95%
     margin: 0 auto
 
   div.mejs-audio
