Fixed mobile profile top section

--- a/app/assets/stylesheets/mobile/_avatars.sass
+++ b/app/assets/stylesheets/mobile/_avatars.sass
@@ -1,39 +1,35 @@
-@media only screen and (max-width: 990px)
+// ----------------Avatars
 
-  /* Style adjustments for viewports 990px and under go here
-  // `Avatars
-  //----------------------------------------------------------------------------------------------------
+.avatar_small,
+.avatar_medium,
+.avatar_large,
+.avatar_huge
+  +border-radius(2px)
+  +box-shadow(rgba(#000, 0.2) 0 1px 2px 0)
+  border: 2px solid #fff
 
-  .avatar_small,
-  .avatar_medium,
-  .avatar_large,
-  .avatar_huge
-    +border-radius(2px)
-    +box-shadow(rgba(#000, 0.2) 0 1px 2px 0)
-    border: 2px solid #fff
+a:hover .avatar_small,
+a:hover .avatar_medium,
+a:hover .avatar_large
+  +glow
+  border-color: #ccc
 
-  a:hover .avatar_small,
-  a:hover .avatar_medium,
-  a:hover .avatar_large
-    +glow
-    border-color: $blue
+.avatar_small
+  width: 20px
+  height: 20px
 
-  .avatar_small
-    width: 20px
-    height: 20px
+.avatar_medium
+  width: 25px
+  height: 25px
 
-  .avatar_medium
-    width: 25px
-    height: 25px
+.avatar_large
+  width: 48px
+  height: 48px
 
-  .avatar_large
-    width: 48px
-    height: 48px
+.avatar_huge
+  width: 70px
+  height: 70px
 
-  .avatar_huge
-    width: 100px
-    height: 100px
-
-  a:hover .avatar_huge
-    +box-shadow(rgba($blue_light, 0.5) 0 0 5px 0, rgba(#000, 0.15) 0 4px 4px 0)
-    border-color: $blue
+a:hover .avatar_huge
+  +box-shadow(rgba($blue_light, 0.5) 0 0 5px 0, rgba(#000, 0.15) 0 4px 4px 0)
+  border-color: #ccc
