--- a/app/assets/stylesheets/mobile/_user.sass
+++ b/app/assets/stylesheets/mobile/_user.sass
@@ -9,6 +9,11 @@
   font-size: 13px
   padding: 0px
 
+  .profile_header
+    padding: 30px 30px 10px 130px
+    overflow: visible
+    height: auto
+
   .bio
     margin: 20px 0 20px 20px
     width: 60%
@@ -38,7 +43,13 @@
 
   .profile_info
     padding: 15px 30px
-    overflow: hidden
+    overflow: visible
+
+    ul.float_left
+      float: none !important
+
+    .icon_small_about
+      background-position: top left
 
 .header_tabs,
 .top_section .header_tabs
