highlight swatch style fix and Wee fix to the footer to make it more appealing

--- a/app/assets/stylesheets/mobile/_main_reader.sass
+++ b/app/assets/stylesheets/mobile/_main_reader.sass
@@ -143,6 +143,13 @@ div.close_tab
   height: 51px
   width: 51px
 
+.color
+  background: none
+
+.color_toolbar button[type="submit"]
+  background: none
+  background-image: none
+
 #menu_settings
   background: transparent
   border: 0px
