--- a/app/views/videos/series.html.haml
+++ b/app/views/videos/series.html.haml
@@ -6,19 +6,16 @@
   #title-bar
     %h1= @video.title
     %span.publisher
-      by
       =link_to(@video.credits, publisher_video_path(id: @video.id))
     %span.share
       =link_to("Share","#")
-
-  = image_tag(@video.hero_image.url, id:"hero")
 
   .inner
     %ul#episodes
       - @video.videos.each do |vid|
         - thumb = vid.small_image
         %li
-          =link_to(video_path(vid), class: "video-name") do
+          =link_to(video_path(vid), class: "video-name", title: "vid.title") do
             = image_tag(thumb.url)
             .info
               %h3.title= vid.title
