--- a/app/views/videos/series.html.haml
+++ b/app/views/videos/series.html.haml
@@ -20,3 +20,7 @@
             .info
               %h3.title= vid.title
               %span.runtime= vid.runtime.gsub(/^0:[0]*/,"")
+
+  .pub-logo
+    %a
+      Publisher image can go here
