--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -43,3 +43,7 @@
           %li
             =link_to(publisher_video_path(id: "test")) do
               Part 4 - Description would go here
+
+  .pub-logo
+    %a
+      Pub logo can go here
