added dark gradient to video thumbs

--- a/app/assets/stylesheets/_videos.sass
+++ b/app/assets/stylesheets/_videos.sass
@@ -170,7 +170,8 @@
         padding: 0
         height: 140px
         margin-top: -140px
-        background: image-url("videos-thumb-grad1.png") no-repeat bottom center
+        background: image-url("videos-thumb-grad.png") no-repeat 0px 0px
+        position: relative
 
         // #episodes a .info .title
         .title
@@ -196,7 +197,7 @@
 
       // Play button that appears on thumb hover
       .info:hover
-        background: image-url("videos-thumb-grad2.png") no-repeat bottom center
+        background-position: 0px -140px
 
   // overriding #main article ul li styling :-(
   ul li
