--- a/app/assets/stylesheets/_videos.sass
+++ b/app/assets/stylesheets/_videos.sass
@@ -85,11 +85,11 @@
 
 // Publisher logo
 .pub-banner
-  margin: 40px 0 0 0
+  margin: 0 auto
+  width: 360px
 
   a
     display: block
-    width: 908px
 
   img
     width: 100%
