--- a/app/views/videos/publisher.html.haml
+++ b/app/views/videos/publisher.html.haml
@@ -5,4 +5,4 @@
 %article.videos-publisher
   %h1= @publisher.name
 
-  %p.video-info= @publisher.description
+  %p.video-info= @publisher.description.html_safe
