--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -14,6 +14,9 @@
 
   = stylesheet_link_tag 'application'
   = stylesheet_link_tag 'wysiwyg/jquery.wysiwyg.css'
+  = javascript_include_tag "/jw/jwplayer.js"
+  %script jwplayer.key="y1ZTdCD+8TKgQ3UfLyFkfiiKoA8DTT4nuuZ8R2J6b91kCGbT4pu19TDHIAg="
+
 
   /[if IE 9]
     = stylesheet_link_tag "ie9.css"
