--- a/app/assets/stylesheets/_videos.sass
+++ b/app/assets/stylesheets/_videos.sass
@@ -86,7 +86,7 @@
 // Publisher logo
 .pub-banner
   margin: 0 auto
-  width: 360px
+  width: 340px
 
   a
     display: block
@@ -94,6 +94,7 @@
   img
     width: 100%
     +round_bottom
+    +round_top
 
 // ------------Landing page
 
@@ -271,6 +272,16 @@
     padding: 15px 0
     width: 340px
     float: right
+
+    .action_button_green
+      display: block
+      margin-bottom: 20px
+      +border-radius(4px)
+      margin-top: 1px
+
+    .pub-banner
+      padding-top: 20px
+      border-top: 1px solid #e1e1e1
 
 // Publisher page
 
