--- a/app/views/sidebars/videos/_publisher.html.haml
+++ b/app/views/sidebars/videos/_publisher.html.haml
@@ -1,6 +1,6 @@
 .widget
   %header
-    %span= link_to(video.title.html_safe, (video.parent? ? series_video_path(video) : video_path(video)))
+    %span= link_to(video.title.html_safe, (video.series? ? series_video_path(video) : video_path(video)))
   %div.body-rounded
     - thumb = video.thumbnails.last
     = image_tag(thumb.url, {style:"width:100%;"})
